# iree

./: CMakeLists.txt
.github/workflows/: ci.yml
build_tools/benchmarks/: benchmark_user_tool.py
build_tools/python/e2e_test_framework/models/: model_groups.py
compiler/src/iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp  Passes.cpp
compiler/src/iree/compiler/ConstEval/: JitGlobals.cpp  Runtime.cpp
runtime/src/iree/base/: string_view.h
runtime/src/iree/base/internal/: path.c
runtime/src/iree/hal/local/: executable_plugin.h
runtime/src/iree/hal/local/plugins/registration/: init.c
runtime/src/iree/tooling/: BUILD  BUILD.bazel  CMakeLists.txt  context_util.c  context_util.h
runtime/src/iree/vm/: ref.c  ref.h  ref_cc.h  ref_test.cc
runtime/src/iree/vm/dynamic/: api.h
samples/custom_dispatch/cpu/plugin/: CMakeLists.txt  example.mlir  standalone_plugin.c  system_plugin.c
samples/custom_module/dynamic/: CMakeLists.txt  README.md  module.cc
samples/custom_module/dynamic/test/: CMakeLists.txt  example.mlir
tests/e2e/test_artifacts/: generated_e2e_test_fetch_models.cmake  generated_e2e_test_iree_artifacts.cmake
tools/: CMakeLists.txt  iree-check-module-main.cc  iree-run-mlir-main.cc
